# Python_Template

./: .gitignore  LICENSE  README.md  circleci.yml  mypy.ini  pull_request_template.md  pyproject.toml  requirements.txt  ruff.toml
.circleci/: config.yml
.github/: component.md  pull_request_template.md
.github/issue_templates/: bug_report.md  feature_request.md
.github/pull_request_templates/: pull_request_template.md
ai_conversation_client/src/: __init__.py  cli.py  client.py  conversation.py  gemini_api_client.py  interface.py
ai_conversation_client/tests/: dummy_api_client.py  test_client.py
api/: main.py  pyproject.toml
api/src/: IssueTrackerClient.h  __init__.py  issue_tracker.py  issue_tracker_interface.py
api/tests/: test_interfaces.py  test_interfaces_behavior.py  test_issue_tracker.py  test_type_checking.py
issue_tracker_client/: main.py  pyproject.toml
issue_tracker_client/src/: __init__.py  issue_tracker.py  main.py
nose2_tests/: test_ai_client_nose2.py  test_ai_dummy_client_nose2.py  test_ai_issue_integration_nose2.py  test_calculator_nose2.py  test_end_to_end_nose2.py  test_integration_nose2.py  test_issue_tracker_nose2.py  test_logger_nose2.py  test_notifier_nose2.py
src/: __init__.py  ai_cli.py  ai_client.py  ai_interface.py  ai_issue_integration.py  calculator.py  cli.py  conversation.py  gemini_api_client.py  issue_tracker.py  issue_tracker_interface.py  json_storage.py  logger.py  mock_implementation.py  notifier.py  test_calculator.py  test_logger.py  test_notifier.py
src/calculator/: api.py  calculator.py  pyproject.toml  test_calculator.py
src/logger/: api.py  logger.py  pyproject.toml  test_logger.py
src/notifier/: api.py  pyproject.toml  test_notifier.py
test-results/: results.xml
tests/: ai_issue_integration_test.py  dummy_api_client.py  test_ai_client.py  test_calculator.py  test_cli.py  test_end_to_end.py  test_integration.py  test_interfaces.py  test_interfaces_behavior.py  test_issue_tracker.py  test_json_storage.py  test_type_checking.py
