[project]
name = "python-template"
version = "0.1.0"
description = "Python project template with linting, type checking, and testing."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff"
]

[tool.mypy]
strict = true  
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
check_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
disable_error_code = ["no-untyped-def", "no-untyped-call", "union-attr"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=html"
testpaths = ["tests"]

# coverage.py
[tool.coverage.run]
branch = true  
source = ["src"] 
omit = ["tests/*", "*/migrations/*"] 

[tool.coverage.report]
fail_under = 20  # Sets minimum coverage threshold
show_missing = true  # Show missing lines in the report
skip_covered = true  # Skip files where everything is covered
exclude_lines = [
    "pragma: no cover",
    "if __name__ == '__main__':",
    "def __repr__"
]

[tool.coverage.html]
directory = "coverage_html_report"  

[tool.coverage.xml]
output = "coverage.xml"  

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "E501",   # Ignore line length
    "D203",   # Conflicts with D211 
    "D213",   # Conflicts with D212
    "PLR0913", # Too many arguments in function, sometimes needed for clarity
    "FBT001", # Not useful in many cases
    "FBT002",  # Not useful in many cases
    "D100",  # Ignore missing docstring in modules
    "D101",  # Ignore missing docstring in classes
    "D102",  # Ignore missing docstring in methods
    "D103",  # Ignore missing docstring in functions
    "D104",  # Ignore missing docstring in __init__.py
    "D107",  # Ignore missing docstring in __init__ method
    "ANN001", # Ignore missing type annotation for functions
    "ANN201", # Ignore missing return type annotation for functions
    "ANN204", # Ignore missing return type annotation for __init__
    "PT009",  # Ignore assertEqual/unittest-style assertions
    "PLR2004", # Ignore magic number rule
    "S101"  # Ignore pytest assert rule
]

# Ruff Formatting Rules
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
