[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "issue-tracker-client"
version = "0.1.0"
description = "Sync GitHub issues to Trello cards"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "requests >=2.31.0"
]

[project.scripts]
issue-sync = "main:main"  # Optional CLI entry point
